Fixed article spacing

--- a/client/src/components/pages/Article-Redesign/components/styles/ArticlesContainer.css
+++ b/client/src/components/pages/Article-Redesign/components/styles/ArticlesContainer.css
@@ -1,14 +1,16 @@
 .articlesContainer {
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-bottom: 5%;
+    display: flex;
+    justify-content: center;
 }
 
 @media only screen and (min-width: 300px) {
     .articleDiv {
         display: grid;
-        grid-template-columns: auto;
-        padding: 2%;
+        grid-template-columns: 1fr;
+        -webkit-column-gap: 24px;
+        column-gap: 24px;
+        padding: 40px;
+        width: auto;
     }
     
     .child {
@@ -19,12 +21,18 @@
 
 @media only screen and (min-width: 600px) {
     .articleDiv {
-        grid-template-columns: auto auto;
+        grid-template-columns: 1fr 1fr;
     }
 }
 
 @media only screen and (min-width: 920px) {
     .articleDiv {
-        grid-template-columns: auto auto auto;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media only screen and (min-width: 1300px) {
+    .articleDiv {
+        width: 1200px;
     }
 }
